# sisypheCPP

./: .gitignore  CMakeLists.txt  Magic.cpp  Magic.h  README.md  main.cpp
cmake/: FindLibMagic.cmake
src/: worker.json
src/worker/filetype/: filetype.cpp  filetype.h
src/worker/walkerfs/: walkerfs.cpp  walkerfs.h
